[gd_scene load_steps=11 format=3 uid="uid://b3srilwbdd7el"]

[ext_resource type="Script" path="res://Level/level.gd" id="1_5ym7l"]
[ext_resource type="PackedScene" uid="uid://yeweddorpr2l" path="res://Player/player.tscn" id="1_u6hc1"]
[ext_resource type="Texture2D" uid="uid://c3fxhiseohawm" path="res://Level/ocean.jpg" id="2_2y0ei"]
[ext_resource type="PackedScene" uid="uid://doacohcsamvk1" path="res://Rope/rope.tscn" id="3_yax8e"]
[ext_resource type="PackedScene" uid="uid://bm0ntlv4hf105" path="res://UFO_Part/ufo_part.tscn" id="4_3yvjf"]
[ext_resource type="PackedScene" uid="uid://cageq52k0lea8" path="res://DropPoint/drop_point.tscn" id="5_7knir"]
[ext_resource type="PackedScene" uid="uid://coymt4wdxm1nq" path="res://Guide/guide.tscn" id="5_80lpw"]
[ext_resource type="PackedScene" uid="uid://oftb7jo3nj2h" path="res://LimitClouds/limit_clouds.tscn" id="7_50bxl"]

[sub_resource type="Animation" id="Animation_kc48g"]
resource_name = "start"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Player1:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1328, 1500), Vector2(1328, 1128)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Player2:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1709, 1500), Vector2(1709, 1140)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_k8ghe"]
_data = {
"start": SubResource("Animation_kc48g")
}

[node name="Level" type="Node2D"]
script = ExtResource("1_5ym7l")

[node name="Background" type="TextureRect" parent="."]
modulate = Color(0.662452, 0.662452, 0.662452, 1)
offset_left = -105.0
offset_top = -121.0
offset_right = 3128.0
offset_bottom = 2094.0
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("2_2y0ei")
stretch_mode = 1

[node name="DropPoint" parent="." instance=ExtResource("5_7knir")]
position = Vector2(1500, 700)

[node name="Rope" parent="." node_paths=PackedStringArray("player1", "player2") instance=ExtResource("3_yax8e")]
position = Vector2(202, 236)
dampening = 0.95
player1 = NodePath("../Player1")
player2 = NodePath("../Player2")

[node name="Guide" parent="." instance=ExtResource("5_80lpw")]
visible = false

[node name="UfoPart" parent="." instance=ExtResource("4_3yvjf")]
position = Vector2(1500, 1000)

[node name="Player1" parent="." node_paths=PackedStringArray("partner") instance=ExtResource("1_u6hc1")]
position = Vector2(1328, 1500)
id = 1
partner = NodePath("../Player2")

[node name="Player2" parent="." node_paths=PackedStringArray("partner") instance=ExtResource("1_u6hc1")]
position = Vector2(1709, 1500)
partner = NodePath("../Player1")

[node name="EnemySpawnTimer" type="Timer" parent="."]
wait_time = 3.0
autostart = true

[node name="HintTimer" type="Timer" parent="."]
wait_time = 5.0

[node name="LimitClouds" parent="." instance=ExtResource("7_50bxl")]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_k8ghe")
}
autoplay = "start"

[connection signal="collected" from="UfoPart" to="." method="_on_ufo_part_collected"]
[connection signal="entered_drop_point" from="UfoPart" to="." method="_on_ufo_part_entered_drop_point"]
[connection signal="hit" from="Player1" to="." method="_on_player_hit"]
[connection signal="hit" from="Player2" to="." method="_on_player_hit"]
[connection signal="timeout" from="EnemySpawnTimer" to="." method="_on_enemy_spawn_timer_timeout"]
[connection signal="timeout" from="HintTimer" to="." method="_on_hint_timer_timeout"]
